--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ header {
 }
 
 .logo {
-    background: url("../images/rosie.jpg");
+    background: url("../images/cv-image5.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
